fixed gray on mobile

--- a/public/stylesheets/sass/main_panels.scss
+++ b/public/stylesheets/sass/main_panels.scss
@@ -42,9 +42,8 @@ button#main-signup-button {
   h1 {
     line-height: 1.2em;
   }
-  // background-image: url('/images/splash-image.jpg'); 
-  // min-height: 0px;
-  background: url('/images/splash-image4.jpg') center top/cover no-repeat #03686b;
+
+  background: url('/images/splash-image5.jpg') center top/cover no-repeat #03686b;
   .title {
     text-align: center;
     color: white;
@@ -213,8 +212,6 @@ h1.section-banner {
       min-height: 720px; // 720px
       display: block;
       margin: 0 auto;
-      // background-image: url('/images/splash-image.jpg'); 
-      // min-height: 0px;
       background: url('/images/splash-image5.jpg') center top/cover no-repeat #03686b;
       .title {
         text-align: center;
